started writing conclusion and rewriting discussion

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -102,8 +102,12 @@
 \clearpage
 \include{discussion}
 
+\chapter{Conclusion}
+\clearpage
+\include{conclusion}
+
 \appendix
-\chapter{}
+\chapter{Appendix}
 \include{appendix}
 
 %-------Bibliography-------%
