--- a/latex/presentation/diffusion_in_brain.tex
+++ b/latex/presentation/diffusion_in_brain.tex
@@ -29,7 +29,7 @@
 \column{2.0in}
 \begin{figure}[H]
 \centering
-% \includegraphics[width=\textwidth]{octahedra.png}
+\includegraphics[width=\textwidth]{figures/PKCG.png}
 \end{figure}
 
  \end{columns}
