--- a/latex/results.tex
+++ b/latex/results.tex
@@ -3,7 +3,7 @@
 \begin{document}
  
 
-\section{Validity of the model}
+\section{Validity of the model}\label{results:validity_of_the_model}
 
 Section \ref{introduction_to_random_walks} shows that a random walk can be described by the Gaussian distribution and that it satisfies the diffusion equation as well as deriving the diffusion equation from a random walk. 
 Mathematically these models are considered equivalent in the limit of sufficiently many walkers. 
