--- a/latex/analysis.tex
+++ b/latex/analysis.tex
@@ -44,6 +44,14 @@ Throughout this thesis the term error is used quite lazily, but unless something
 \end{equation}
 where $u_e$ is an exact (manufactured) solution to the equation, and $u$ is the result from the numerical simulation. 
 This error-estimate is used because it is time-dependent, thus explicitly showing how the error evolves over time. 
+The notation 
+$$
+||\cdot||_2
+$$
+denotes the L2 norm of $\cdot$ which is defined as 
+$$
+||\mathbf M||_2 = \sqrt{\sum_i\sum_j M_{ij}^2}
+$$
 The error is calculated over the entire mesh, which will clearly show if the error from the random-walk areas are dominating, or (otherwise) how the PDE-scheme is holding up.
 Another error estimate that will be used later is the integrated norm of the previously mentioned error estimate. 
 This will be used for the convergence tests to make sure that no effects of simulating for a long time are overlooked, and is defined as 
