--- a/latex/references.bib
+++ b/latex/references.bib
@@ -91,3 +91,14 @@
 	year = "1990"
 }
 
+@article{flekkoy2001coupling,
+	author = "Flekk{\o}y, EG and Feder, J and Wagner, G",
+	journal = "Physical Review E",
+	number = "6",
+	pages = "066302",
+	publisher = "APS",
+	title = "{Coupling particles and fields in a diffusive hybrid model}",
+	volume = "64",
+	year = "2001"
+}
+
