started the analysis chapter

--- a/doc/latex2/introduction.tex
+++ b/doc/latex2/introduction.tex
@@ -1,5 +1,5 @@
 The diffusion equation governs a large number of physical processes on many different length scales. 
-Both heat diffusion through a wall the Brownian motion of dust particles can be described by the diffusion equation. 
+Both heat diffusion through a wall and the Brownian motion of dust particles can be described by the diffusion equation. 
 In some diffusion processes a large number of particles will diffuse from a large volume into a small volume in such a way that only very few particles enter the smaller volume. 
 An example of this in the diffusion of the enzyme PKC$\gamma$ from the body of a brain cell via a dendrite of large volume into dendritic spines. 
 Dendritic spines are the receiving end of a connection between two brain cells, and PKC$\gamma$ is associated with long term reinforcement of such a connection resulting in learning or associative memory storage. 
